tests/snapshots/match_case_align/budget_gate.diagnostics.snap
---
source: tests/diagnostics.rs
assertion_line: 39
expression: render(&diagnostics)
input_file: tests/fixtures/match_case_align/budget_gate.input.py
---
match-case-align@503..503
match-case-align@504..517
match-case-align@562..562
match-case-align@563..576
