tests/snapshots/match_case_align/comment_between_cases.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/match_case_align/comment_between_cases.input.py
---
match-case-align@189..189
match-case-align@190..199
match-case-align@261..261
match-case-align@262..271
match-case-align@305..305
match-case-align@306..315
