tests/snapshots/match_case_align/expr_bodies.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/match_case_align/expr_bodies.input.py
---
match-case-align@320..320
match-case-align@321..334
match-case-align@358..358
match-case-align@359..372
match-case-align@400..400
match-case-align@401..414
match-case-align@439..439
match-case-align@440..453
match-case-align@499..499
match-case-align@500..513
match-case-align@538..538
match-case-align@539..552
