tests/snapshots/match_case_align/idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/match_case_align/idempotent.input.py
---

