tests/snapshots/match_case_align/idempotent.input.py.snap
---
source: tests/integration.rs
expression: "&output"
input_file: tests/fixtures/match_case_align/idempotent.input.py
---
"""
Input that is already collapsed and aligned. The rule emits
zero edits and the output equals the input byte-for-byte.
"""

match credential.kind:
    case "apprenticeship" : icon = "wrench"
    case "certification"  : icon = "scroll"
    case "program"        : icon = "cap"
