tests/snapshots/match_case_align/mixed_arms.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/match_case_align/mixed_arms.input.py
---
match-case-align@378..387
match-case-align@504..504
match-case-align@505..514
match-case-align@537..537
match-case-align@538..547
