tests/snapshots/match_case_align/multiline_body.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/match_case_align/multiline_body.input.py
---
match-case-align@375..384
